--- a/docs/GermIndices.Rmd
+++ b/docs/GermIndices.Rmd
@@ -6,7 +6,7 @@ date: "10 December, 2018"
 output:
   html_document:
     keep_md: no
-    toc: yes
+    toc: no
     toc_float:
       collapsed: no
       smooth_scroll: no
