--- a/docs/HTnonlin.Rmd
+++ b/docs/HTnonlin.Rmd
@@ -7,7 +7,7 @@ output:
     toc: yes
   html_document:
     keep_md: no
-    toc: yes
+    toc: no
     toc_float:
       collapsed: no
       smooth_scroll: no
