--- a/docs/ComparingSeedLots.Rmd
+++ b/docs/ComparingSeedLots.Rmd
@@ -4,7 +4,7 @@ date: "17 July, 2019"
 output:
   html_document:
     keep_md: no 
-    toc: yes
+    toc: no
     toc_float:
       collapsed: no
       smooth_scroll: no
